# transformer

./: .gitignore  README.md  pyproject.toml
scripts/: inference.py  train.py
src/transformer/data/: dataset.py
src/transformer/engines/: train.py
src/transformer/model/: attention.py  decoder.py  embedding.py  encoder.py  misc.py  transformer.py
tests/: test_transformer.py
